--- a/Miki.Common/Miki.Common.csproj
+++ b/Miki.Common/Miki.Common.csproj
@@ -1,9 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netstandard1.6</TargetFramework>
     <AssemblyName>Miki.Common</AssemblyName>
     <RootNamespace>Miki.Common</RootNamespace>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Description>Miki's type library</Description>
   </PropertyGroup>
 
   <ItemGroup>
