--- a/Miki.Common/Miki.Common.csproj
+++ b/Miki.Common/Miki.Common.csproj
@@ -6,6 +6,8 @@
     <RootNamespace>Miki.Common</RootNamespace>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Description>Miki's type library</Description>
+    <Version>1.2.0</Version>
+    <PackageReleaseNotes>Remove a ton of things.</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
